# crossplatform-gui-toolkit

./: .gitignore  CMakeLists.txt  README.md  main.cpp  user_program.cpp
elements/: MyButton.cpp  MyText.cpp  MyTextInput.cpp
